--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "expo-linear-gradient": "~11.4.0"
+    "expo-linear-gradient": "~11.4.0",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
