--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "weather_app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": ".src/assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": ".src/assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -24,12 +24,12 @@
       "package": "ttpc.weatherapp",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": ".src/assets/adaptive-icon.png",
+        "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": ".src/assets/favicon.png"
+      "favicon": "./src/assets/favicon.png"
     }
   }
 }
